tests/miniJava/neg/000101_mutation.MiniJava
class java { public false void Main ( String [ ] java ) { { } } }
